--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,7 +1,8 @@
-neo4j
-neo4j-driver
-py2neo
-requests
-flask
-flask-restful
-gunicorn
+neo4j==1.7.6
+neo4j-driver==1.7.6
+py2neo==4.3.0
+requests==2.23.0
+flask==1.1.2
+flask-restful==0.3.8
+flask-cors==3.0.8
+gunicorn==20.0.4
