--- a/docker-compose.api.yml
+++ b/docker-compose.api.yml
@@ -25,7 +25,7 @@ services:
       - "5000:5000"
     depends_on:
       - neo4j
-    command: gunicorn --bind 0.0.0.0:5000 graph_api:app
+    command: gunicorn --bind 0.0.0.0:5000 api:app
     env_file:
       - .env.prod
       
